fix text-alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -238,6 +238,7 @@ a {
   display: flex;
   flex-direction: column;
   padding-bottom: 2em;
+  align-items: center;
 }
 
 .mens-outerwear img {
@@ -371,7 +372,7 @@ a {
   padding: 4px;
 }
 
-.mens-apparel a {
+.mens-apparel img {
   max-width: 100%;
   align-self: center;
   justify-self: center;
@@ -790,6 +791,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
+  text-align: center;
 }
 
 footer a {
